--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <div class="content">
-      <img src="/images/icon-sedans.svg" alt="image of sedan">
+      <img src="icon-sedans.svg" alt="image of sedan">
       <h2 class="title">Sedans</h2>
       <p class="description">
         Choose a sedan for its affordability and excellent fuel economy.Ideal for cruising in the city or an your next road trip.
@@ -19,7 +19,7 @@
     </div>
 
     <div class="content-1">
-      <img src="/images/icon-suvs.svg" alt="image of suv">
+      <img src="icon-suvs.svg" alt="image of suv">
       <h2 class="title">
         Suvs
       </h2>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="content-2">
-      <img src="/images/icon-luxury.svg" alt="luxury image">
+      <img src="icon-luxury.svg" alt="luxury image">
       <h2 class="title">luxury</h2>
       <p class="description">
         Cruise in the best car brands without the bloated prices.Enjoy the enhanced comfort of a luxury rental and arrive in style.
